--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             </h1>
             <div class="intro-details">
               <p>
-                I've been doing wev development since <b id="b-1">2021</b>.
+                I've been doing web development since <b id="b-1">2021</b>.
                 <br />
-                I'm currently freelacing and volunteering for various
+                I'm currently freelancing and volunteering for various
                 <b id="b-2">NGOs and startups</b>. <br />
                 I've lived in <b id="b-3">four countries</b> and speak
                 <b id="b-3">three languages</b>.<br />
