--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
                 <b id="b-4">positive change in the world</b>.
                 <br />
                 <br />
+
                 <a href="#works">Checkout my works</a>
+                <br /><br />
+                <a href="#contact">Get in touch</a>
               </p>
 
               <div class="intro-img">
@@ -139,7 +142,7 @@
                         Input your birth date and any date in future. It shows
                         number of weeks as squares.
                       </p> -->
-                      <p class="used-tech">HTML | CSS | Javascript | React</p>
+                      <p class="used-tech">HTML | CSS | Javascript</p>
                       <div class="content-preview">
                         <i
                           class="fa-brands fa-github"
