--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               </p>
 
               <div class="intro-img">
-                <img src="images/title-pic.jpg" alt="" />
+                <img src="images/title-pic.jpg" alt="portfolio picture" />
               </div>
             </div>
           </header>
