--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <article class="style1">
                   <span class="image">
                     <!-- <img src="images/pic02.jpg" alt="" /> -->
-                    <img src="images/haikulutter.PNG" alt="" />
+                    <img src="images/haikulutter.PNG" alt="haikulutter" />
                   </span>
                   <a class="content-container">
                     <h2>Haikulutter - Social Media App</h2>
@@ -133,7 +133,7 @@
                 </article>
                 <article class="style2">
                   <span class="image">
-                    <img src="images/life-calendar.PNG" alt="" />
+                    <img src="images/life-calendar.PNG" alt="life calendar" />
                   </span>
                   <a class="content-container">
                     <h2>Life Calendar with Bucket List</h2>
@@ -163,7 +163,7 @@
                 </article>
                 <article class="style3">
                   <span class="image">
-                    <img src="images/henrys-map.PNG" alt="" />
+                    <img src="images/henrys-map.PNG" alt="henrys map" />
                   </span>
                   <a class="content-container">
                     <h2>Henry's Map</h2>
@@ -200,10 +200,10 @@
               <div class="tiles">
                 <article class="style2">
                   <span class="image">
-                    <img src="images/cfc.PNG" alt="" />
+                    <img src="images/cfc.PNG" alt="crafts for charity" />
                   </span>
                   <a class="content-container">
-                    <h2>Chraft for Charity</h2>
+                    <h2>Crafts for Charity</h2>
                     <div class="content">
                       <!-- <p>
                         Worked as a member of coding team. Built a static
@@ -225,7 +225,7 @@
                 </article>
                 <article class="style3">
                   <span class="image">
-                    <img src="images/pic03.jpg" alt="" />
+                    <img src="images/pic03.jpg" alt="seans legacy" />
                   </span>
                   <a class="content-container">
                     <h2>Sean's Legacy</h2>
@@ -241,7 +241,7 @@
               <div class="tiles">
                 <article class="style1">
                   <span class="image">
-                    <img src="images/lc.png" alt="" />
+                    <img src="images/lc.png" alt="laugh connect" />
                   </span>
                   <a class="content-container">
                     <h2>Laugh Connect</h2>
